--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
+    "react-datepicker": "^4.8.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0",
     "react-dropzone": "^14.2.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.34",
+    "@types/react-datepicker": "^4.4.1",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "^4.6.4"
